--- a/tukemonogame/tukemonogame/tukemonogame.vcxproj
+++ b/tukemonogame/tukemonogame/tukemonogame.vcxproj
@@ -154,14 +154,17 @@
     <ClCompile Include="End.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="PadInput.cpp" />
+    <ClCompile Include="Result.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="Title.cpp" />
     <ClCompile Include="Tukemono.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="common.h" />
     <ClInclude Include="End.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="PadInput.h" />
+    <ClInclude Include="Result.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="Title.h" />
   </ItemGroup>
